@@ -20,6 +20,7 @@ Feature: Image
     | name      |
     | xpath     |
     | index     |
+    | alt       |
 
   Scenario Outline: Locating an image using multiple parameters
     When I get the image element by "<param1>" and "<param2>"
